# travel-mcp

./: .env.example  .gitignore  CHANGELOG.md  README.md  SETUP.md  audit.py  profile.py  prompts.py  pyproject.toml  requirements.txt  router.py  server.py  validators.py
.github/workflows/: personal-pii-scrub.yml  publish-mcp.yml  security-audit.yml  test.yml
tests/: test_basic.py
tests/eval_fixtures/: README.md  analyze_route.yaml  channel_comparison.yaml  compare_trips.yaml  emergency_travel_card.yaml  fare_rules_analysis.yaml  geo_pricing_arbitrage.yaml  post_trip_review.yaml  price_drop_analysis.yaml  pricing_reality_check.yaml  run_evals.py  timing_sweet_spot.yaml  tracking_strategy.yaml  trip_prep_brief.yaml
