[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "travel-mcp"
version = "0.1.0"
description = "Analytical travel-planner MCP. Vault-backed profile + trip plans, seven flight-strategy analyzers, trip-prep + emergency-card + post-trip review."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Adelaida Diaz-Roa" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "travel",
    "trip-planning",
    "flights",
    "fare-analysis",
    "fastmcp",
    "claude",
    "anthropic",
    "obsidian",
    "geo-pricing",
    "hidden-city",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Internet",
]
dependencies = [
    "fastmcp>=3.2.3,<4.0",
    "httpx>=0.27,<1.0",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8,<1.0",
]

[project.urls]
Homepage = "https://diazroa.com"
Repository = "https://github.com/adelaidasofia/travel-mcp"
Issues = "https://github.com/adelaidasofia/travel-mcp/issues"

[tool.hatch.build.targets.wheel]
only-include = [
    "server.py",
    "validators.py",
    "audit.py",
    "profile.py",
    "router.py",
    "prompts.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "/server.py",
    "/validators.py",
    "/audit.py",
    "/profile.py",
    "/router.py",
    "/prompts.py",
    "/README.md",
    "/SETUP.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/pyproject.toml",
    "/requirements.txt",
    "/.env.example",
    "/tests",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
